--- a/Mike.Spikes/packages.config
+++ b/Mike.Spikes/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EasyNetQ" version="0.6.3.17" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.8" targetFramework="net40" />
-  <package id="RabbitMQ.Client" version="2.8.1" targetFramework="net40" />
+  <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
+  <package id="EasyNetQ" version="0.6.3.23" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net40" />
+  <package id="NUnit" version="2.6.1" targetFramework="net40" />
+  <package id="RabbitMQ.Client" version="2.8.6" targetFramework="net40" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
 </packages>
