--- a/Mike.Spikes/Mike.Spikes.csproj
+++ b/Mike.Spikes/Mike.Spikes.csproj
@@ -37,12 +37,15 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\packages\Castle.Windsor.3.1.0\lib\net40\Castle.Windsor.dll</HintPath>
     </Reference>
-    <Reference Include="EasyNetQ, Version=0.6.3.23, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="EasyNetQ, Version=0.8.1.37, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EasyNetQ.0.6.3.23\lib\net40\EasyNetQ.dll</HintPath>
+      <HintPath>..\packages\EasyNetQ.0.8.1.37\lib\net40\EasyNetQ.dll</HintPath>
+    </Reference>
+    <Reference Include="ImpromptuInterface">
+      <HintPath>..\packages\ImpromptuInterface.6.0.6\lib\net40\ImpromptuInterface.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.9\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.4.5.10\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
@@ -65,9 +68,12 @@
     <Compile Include="AsyncMessaging\HowToBlockUntilAMessageArrives.cs" />
     <Compile Include="CurryContainer\Functional.cs" />
     <Compile Include="CurryContainer\IRegistration.cs" />
+    <Compile Include="CurryContainer\RegistrationExtensions.cs" />
     <Compile Include="CurryContainer\Spike.cs" />
+    <Compile Include="Dynamic\ExpandoObjectSpike.cs" />
     <Compile Include="FluentApi\FluentApiSpike.cs" />
     <Compile Include="HttpHandler\MyHttpHandler.cs" />
+    <Compile Include="MessageHandler\Spike.cs" />
     <Compile Include="Monad\IdentityMonad.cs" />
     <Compile Include="Monad\ParserMonad.cs" />
     <Compile Include="Monad\StateMonad.cs" />
