--- a/Mike.Spikes/packages.config
+++ b/Mike.Spikes/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
   <package id="EasyNetQ" version="0.8.1.37" targetFramework="net40" />
   <package id="ImpromptuInterface" version="6.0.6" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net40" />
   <package id="NUnit" version="2.6.1" targetFramework="net40" />
   <package id="RabbitMQ.Client" version="2.8.6" targetFramework="net40" />
