--- a/Mike.Spikes/packages.config
+++ b/Mike.Spikes/packages.config
@@ -9,4 +9,5 @@
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="RabbitMQ.Client" version="3.0.0" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
+  <package id="Sprache" version="1.10.0.23" targetFramework="net40" />
 </packages>
