--- a/Mike.Spikes/packages.config
+++ b/Mike.Spikes/packages.config
@@ -2,13 +2,14 @@
 <packages>
   <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
-  <package id="EasyNetQ" version="0.9.2.75" targetFramework="net40" />
+  <package id="EasyNetQ" version="0.25.0.171" targetFramework="net45" />
   <package id="EasyNetQ.Management.Client" version="0.12.3.117" targetFramework="net40" />
   <package id="ImpromptuInterface" version="6.0.6" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.11" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
-  <package id="RabbitMQ.Client" version="3.0.2" targetFramework="net40" />
+  <package id="RabbitMQ.Client" version="3.1.5" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="net40" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net40" />
